-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8227318 | 11.0.6-oracle | Nils Eliasson | P3 | Resolved | Fixed | b01 |
A short copy of an array of primitive elements should be turned into a series of loads/stores but is not anymore.
- backported by
-
JDK-8227318 8210887 broke arraycopy optimization when ZGC is enabled
-
- Resolved
-
- relates to
-
JDK-8210887 Tweak C2 gc api for arraycopy
-
- Resolved
-