8211776: 8210887 broke arraycopy optimization when ZGC is enabled

Reviewed-by: kvn